--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link rel="icon" type="image/png" href="">
 
 </head>
-<body style ="background-image: url('images/background.png'); background-repeat: no-repeat;">
+<body style ="background-image: url('images/background.png'); background-repeat: no-repeat; background-size: contain;">
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
